--- a/app/src/main/res/layout/game_card_layout.xml
+++ b/app/src/main/res/layout/game_card_layout.xml
@@ -7,7 +7,8 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         app:cardElevation="4dp"
-        app:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp"
+        app:cardBackgroundColor="@color/card_background">
 
     <LinearLayout
             android:orientation="vertical"
