--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="status_bar_color">#673AB7</color>
-
-    <!-- Main colors -->
+    <!-- Primary colors -->
     <color name="primary_color">#673AB7</color>
     <color name="secondary_color">#2E7D32</color>
+    <color name="primary_container">#3700B3</color>
     <color name="on_primary_color">#FFFFFF</color>
-    <color name="primary_container">#BB86FC</color>
+    <color name="status_bar_color">#673AB7</color>
 
-    <!-- Background -->
+    <!-- Light mode specific -->
     <color name="background_color">#FFFFFF</color>
     <color name="on_background_color">#000000</color>
-
-    <!-- Surface elements (CardView, Surface) -->
     <color name="surface_color">#F5F5F5</color>
     <color name="on_surface_color">#000000</color>
-
-    <!-- Fields to fill in (EditText, TextInputLayout) -->
-    <color name="field_background">#FFFFFF</color>
+    <color name="field_background">#EEEEEE</color>
     <color name="field_text_color">#000000</color>
-    <color name="field_hint_color">#666666</color>
+    <color name="field_hint_color">#757575</color>
+
+    <!-- Card background -->
+    <color name="card_background">#FFFFFF</color>
+
+    <!-- Text colors -->
+    <color name="text_secondary">#666666</color>
+    <color name="text_tertiary">#888888</color>
 </resources>
