Build done + some fixes and info panel update
Screenshots added, some strings and colors were changed.
Bug with wrong color for date header so it was not showing was fixed. Info panel updated, readme updated

--- a/app/src/main/res/layout/date_header_item.xml
+++ b/app/src/main/res/layout/date_header_item.xml
@@ -11,7 +11,7 @@
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?attr/colorOutline"
+            android:background="@color/text_secondary"
             android:layout_marginBottom="8dp"/>
 
     <!-- Date header -->
